<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_HnhtHnltLinkage" Id="{01f6a0de-a95a-4f6e-9757-ed042616c8fb}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_HnhtHnltLinkage
VAR_INPUT
	//control struct for hnht hnlt linkage
	controlAutomatic : ST_HnhtHnltLinkageControl;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	HeatExchanger1System : FB_HeatExchanger1System;
	HeatPumpSystem : FB_HeatPumpSystem_HNHT;
	
	
	//internal variables
	bAlgorithmPermission : BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[bAlgorithmPermission := controlAutomatic.bAlgorithmPermission_HNHT AND controlAutomatic.bAlgorithmPermission_HNLT;

HeatExchanger1System(bSetStatusOnAutomatic := controlAutomatic.bSetStatusOn_HeatExchanger1,
	bAlgorithmPermission := bAlgorithmPermission,
	fSetPointAutomatic := controlAutomatic.fFeedTemperature_HNLT_Heating);
	
HeatPumpSystem(bSetStatusOnAutomatic := controlAutomatic.bSetStatusOn_HeatPump,
	bAlgorithmPermission := bAlgorithmPermission,
	fSetPointAutomatic := controlAutomatic.fFeedTemperature_HNHT);]]></ST>
    </Implementation>
    <LineIds Name="FB_HnhtHnltLinkage">
      <LineId Id="50" Count="3" />
      <LineId Id="19" Count="0" />
      <LineId Id="34" Count="1" />
      <LineId Id="69" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>